hphp/test/zend/good/tests/lang/bug23279.php.expectf
Fatal error: Uncaught exception 'Exception' with message '' in %s/bug23279.php:11
Stack trace:
#0 (): main()
#1 {main}
Goodbye Cruel World
